fix tool panel sive overflow & add touch events to board

--- a/src/ui/React/LeftMenu/left-menu.scss
+++ b/src/ui/React/LeftMenu/left-menu.scss
@@ -1,6 +1,6 @@
 .LeftMenu {
   // margin-top: 140px;
-  margin-left: 10px;
+  //margin-left: 10px;
   display: flex;
   flex-direction: column;
   button {
