--- a/src/ui/React/ReactUpMenu/ToolsPanel/tools-panel.scss
+++ b/src/ui/React/ReactUpMenu/ToolsPanel/tools-panel.scss
@@ -33,4 +33,11 @@
       width: 80px;
     }
   }
+
+  @media (max-width: 1100px) {
+    height: 55px;
+    flex-wrap:wrap;
+    align-items: baseline;
+  }
+
 }
