--- a/src/ui/React/ReactUpMenu/react-up.scss
+++ b/src/ui/React/ReactUpMenu/react-up.scss
@@ -39,6 +39,9 @@
       //margin-top:10px;
 
   }
- 
+
+  @media (max-width: 1100px) {
+    height: 125px;
+  }
  
 }
